# CMake-test-project

./: CMakeLists.txt  readme.md
DynLib/: CMakeLists.txt  header.h  source.cpp
LibTest/: LibTest.cpp
